添加首页链接

--- a/create_account.html
+++ b/create_account.html
@@ -550,7 +550,7 @@
                                                             <div class="border-left">
                                                             </div>
                                                             <div class="mt-icon-ajaxcart">
-                                                                <a class="mt-cart-label home-reg" href="#">
+                                                                <a class="mt-cart-label home-reg" href="register.html">
                                                                   注册
                                                                 </a>
                                                             </div>
@@ -566,7 +566,9 @@
                                                         method="get">
                                                             <div class="search-style">
                                                                 <div class="mt-icon-ajax">
-                                                                    登入
+                                                                    <a class="login-a" href="login.html">
+                                                                        登入
+                                                                    </a>
                                                                 </div>
                                                             </div>
                                         
