修改轮播图

--- a/about.html
+++ b/about.html
@@ -222,7 +222,7 @@
             <li class="level0 nav-1 level-top first parent">
               <i class="fa fa-angle-down">
               </i>
-              <a href="#" class="level-top">
+              <a href="product_list.html" class="level-top">
                 <span>
                   系列
                 </span>
@@ -261,7 +261,7 @@
             <li class="level0 nav-1 level-top first parent">
               <i class="fa fa-angle-down">
               </i>
-              <a href="#" class="level-top">
+              <a href="product_list2.html" class="level-top">
                 <span>
                   用途
                 </span>
@@ -312,14 +312,14 @@
               </a>
             </li>
             <li class="level0 nav-3 level-top">
-              <a href="#" class="level-top">
+              <a href="faq.html" class="level-top">
                 <span>
                   FAQ
                 </span>
               </a>
             </li>
             <li class="level0 nav-4 level-top last">
-              <a href="#" class="level-top">
+              <a href="instruct.html" class="level-top">
                 <span>
                   配送说明
                 </span>
@@ -392,7 +392,7 @@
                                   <li class="level0  nav-1 level-top first parent parent-sub">
                                     <i class="fa fa-angle-down">
                                     </i>
-                                    <a href="#" class="level-top">
+                                    <a href="product_list.html" class="level-top">
                                       <span>
                                         系列
                                       </span>
@@ -449,7 +449,7 @@
                                   <li class="level0 nav-1 level-top first parent parent-sub">
                                     <i class="fa fa-angle-down">
                                     </i>
-                                    <a href="#" class="level-top">
+                                    <a href="product_list2.html" class="level-top">
                                       <span>
                                         用途
                                       </span>
@@ -518,14 +518,14 @@
                                     </a>
                                   </li>
                                   <li class="level0 nav-3 level-top">
-                                    <a href="#" class="level-top">
+                                    <a href="faq.html" class="level-top">
                                       <span>
                                         FAQ
                                       </span>
                                     </a>
                                   </li>
                                   <li class="level0 level-top parent custom-block  menu-item-right">
-                                    <a href="#" class="level-top">
+                                    <a href="instruct.html" class="level-top">
                                       <span>
                                         配送说明
                                       </span>
@@ -727,22 +727,22 @@
                         <div class="footer-menu-link">
                           <ul>
                             <li class="first">
-                              <a href="#">
+                              <a href="about.html">
                                 关于薇茜
                               </a>
                             </li>
                             <li>
-                              <a href="#">
+                              <a href="instruct.html">
                                 配送服务
                               </a>
                             </li>
                             <li>
-                              <a href="#">
+                              <a href="faq.html">
                                 FAQ
                               </a>
                             </li>
                             <li class="footer-last">
-                              <a href="#">
+                              <a href="contactus.html">
                                 联系我们
                               </a>
                             </li>
