--- a/cart.html
+++ b/cart.html
@@ -918,7 +918,7 @@
             </div>
           </div>
         </section>
-        <footer class="footer-container">
+           <footer class="footer-container">
           <div class="footer-top">
             <div class="container">
               <div class="footer">
@@ -948,28 +948,28 @@
                     <script type="text/javascript" src="js/frontend.js">
                     </script>
                   </div>
-                  <div class="" >
+                  <div class="" id="widget-a2332aacf77e91334b297efdec5a07e1">
                     <div class="">
                       <div class="col-lg-12  col-md-12  col-sm-12  col-xs-12  ">
                         <div class="footer-menu-link">
                           <ul>
                             <li class="first">
-                              <a href="#">
+                              <a href="about.html">
                                 关于薇茜
                               </a>
                             </li>
                             <li>
-                              <a href="#">
+                              <a href="instruct.html">
                                 配送服务
                               </a>
                             </li>
                             <li>
-                              <a href="#">
+                              <a href="faq.html">
                                 FAQ
                               </a>
                             </li>
                             <li class="footer-last">
-                              <a href="#">
+                              <a href="contactus.html">
                                 联系我们
                               </a>
                             </li>
@@ -977,8 +977,6 @@
                         </div>
                       </div>
                     </div>
-                    <script type="text/javascript" src="js/frontend.js">
-                    </script>
                   </div>
                 </div>
               </div>
