--- a/contactus.html
+++ b/contactus.html
@@ -689,7 +689,7 @@
             </div>
           </div>
         </section>
-        <footer class="footer-container">
+           <footer class="footer-container">
           <div class="footer-top">
             <div class="container">
               <div class="footer">
@@ -725,22 +725,22 @@
                         <div class="footer-menu-link">
                           <ul>
                             <li class="first">
-                              <a href="#">
+                              <a href="about.html">
                                 关于薇茜
                               </a>
                             </li>
                             <li>
-                              <a href="#">
+                              <a href="instruct.html">
                                 配送服务
                               </a>
                             </li>
                             <li>
-                              <a href="#">
+                              <a href="faq.html">
                                 FAQ
                               </a>
                             </li>
                             <li class="footer-last">
-                              <a href="#">
+                              <a href="contactus.html">
                                 联系我们
                               </a>
                             </li>
