--- a/product_list.html
+++ b/product_list.html
@@ -1490,99 +1490,97 @@
             </div>
           </div>
         </section>
-        <footer class="footer-container">
-          <div class="footer-top">
-            <div class="container">
-              <div class="footer">
-                <div class="show-grid row">
-                  <div class="" id="widget-e7922fc64767df69c432eaf0d4b1f5e4">
-                    <div class="">
-                      <h4 class="text-center home-footer-title">
-                        Rabbit Hole
-                      </h4>
-                      <div class="col-lg-12  col-md-12  col-sm-12  col-xs-12  ">
-                        <div class="list-social-icon">
-                          <a href="#">
-                            <i class="fa fa-weibo">
-                            </i>
-                          </a>
-                          <a href="#">
-                            <i class="fa fa-weixin">
-                            </i>
-                          </a>
-                          <a href="#">
-                            <i class="fa fa-envelope">
-                            </i>
-                          </a>
-                        </div>
+      <footer class="footer-container">
+        <div class="footer-top">
+          <div class="container">
+            <div class="footer">
+              <div class="show-grid row">
+                <div class="" id="widget-e7922fc64767df69c432eaf0d4b1f5e4">
+                  <div class="">
+                    <h4 class="text-center home-footer-title">
+                      Rabbit Hole
+                    </h4>
+                    <div class="col-lg-12  col-md-12  col-sm-12  col-xs-12  ">
+                      <div class="list-social-icon">
+                        <a href="#">
+                          <i class="fa fa-weibo">
+                          </i>
+                        </a>
+                        <a href="#">
+                          <i class="fa fa-weixin">
+                          </i>
+                        </a>
+                        <a href="#">
+                          <i class="fa fa-envelope">
+                          </i>
+                        </a>
                       </div>
                     </div>
-                    <script type="text/javascript" src="js/frontend.js">
-                    </script>
                   </div>
-                  <div class="" id="widget-a2332aacf77e91334b297efdec5a07e1">
-                    <div class="">
-                      <div class="col-lg-12  col-md-12  col-sm-12  col-xs-12  ">
-                        <div class="footer-menu-link">
-                          <ul>
-                            <li class="first">
-                              <a href="#">
-                                关于薇茜
-                              </a>
-                            </li>
-                            <li>
-                              <a href="#">
-                                配送服务
-                              </a>
-                            </li>
-                            <li>
-                              <a href="#">
-                                FAQ
-                              </a>
-                            </li>
-                            <li class="footer-last">
-                              <a href="#">
-                                联系我们
-                              </a>
-                            </li>
-                          </ul>
-                        </div>
+                  <script type="text/javascript" src="js/frontend.js">
+                  </script>
+                </div>
+                <div class="" id="widget-a2332aacf77e91334b297efdec5a07e1">
+                  <div class="">
+                    <div class="col-lg-12  col-md-12  col-sm-12  col-xs-12  ">
+                      <div class="footer-menu-link">
+                        <ul>
+                          <li class="first">
+                            <a href="about.html">
+                              关于薇茜
+                            </a>
+                          </li>
+                          <li>
+                            <a href="instruct.html">
+                              配送服务
+                            </a>
+                          </li>
+                          <li>
+                            <a href="faq.html">
+                              FAQ
+                            </a>
+                          </li>
+                          <li class="footer-last">
+                            <a href="contactus.html">
+                              联系我们
+                            </a>
+                          </li>
+                        </ul>
                       </div>
                     </div>
-                    <script type="text/javascript" src="js/frontend.js">
-                    </script>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="footer-copyright">
-            <div class="container">
-              <div class="footer">
-                <div class="row">
-                  <div class="col-xs-12 clearfix">
-                    <address>
-                      Copyright © 2015
-                      <a class="active" href="#" title="Magento Themes">
-                        薇茜甜点
-                      </a>
-                    </address>
-                  </div>
+        </div>
+        <div class="footer-copyright">
+          <div class="container">
+            <div class="footer">
+              <div class="row">
+                <div class="col-xs-12 clearfix">
+                  <address>
+                    Copyright © 2015
+                    <a class="active" href="#" title="Magento Themes">
+                      薇茜甜点
+                    </a>
+                  </address>
                 </div>
               </div>
             </div>
           </div>
-          <div id="back-top" class="hidden-phone">
-            <a href="#top">
-              <div class="sticker-wrapper">
-                <div class="sticker" title="Back to Top">
-                  <i class="fa fa-angle-up">
-                  </i>
-                </div>
+        </div>
+        <div id="back-top" class="hidden-phone">
+          <a href="#top">
+            <div class="sticker-wrapper">
+              <div class="sticker" title="Back to Top">
+                <i class="fa fa-angle-up">
+                </i>
               </div>
-            </a>
-          </div>
-        </footer>
+            </div>
+          </a>
+        </div>
+      </footer>
         <script type="text/javascript">
           function setGridItem($) {
             var winWidth = $(window).width();
