--- a/user_myorder.html
+++ b/user_myorder.html
@@ -881,147 +881,97 @@
            </div>
          </div>
        </section>
-        <footer class="footer-container">
-                    <div class="footer-top">
-                        <div class="container">
-                            <div class="footer">
-                                <div class="show-grid row">
-                                    <div class="" id="widget-e7922fc64767df69c432eaf0d4b1f5e4">
-                                        <div class="">
-                                           <h4 class="text-center home-footer-title">Rabbit Hole</h4>
-                                            <div class="col-lg-12  col-md-12  col-sm-12  col-xs-12  ">
-                                                <div class="list-social-icon">
-                                                    <a href="#">
-                                                        <i class="fa fa-weibo"></i>
-                                                    </a>
-                                                    <a href="#">
-                                                        <i class="fa fa-weixin"></i>
-                                                    </a>
-                                                    <a href="#">
-                                                       <i class="fa fa-envelope"></i>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <script type="text/javascript" src="js/frontend.js">
-                                        </script>
-                                        <script type="text/javascript">
-                                            new MT.Widget('widget-e7922fc64767df69c432eaf0d4b1f5e4', {
-                                                animation: {
-                                                    "enable": false,
-                                                    "animationName": null,
-                                                    "animationDelay": 300,
-                                                    "itemSelector": null,
-                                                    "engineSrc": "http:\/\/localhost:8088\/sweet\/js\/wow.js"
-                                                },
-                                                parallax: {
-                                                    "enable": false,
-                                                    "type": null,
-                                                    "overlay": null,
-                                                    "video": {
-                                                        "src": null,
-                                                        "volume": false
-                                                    },
-                                                    "image": {
-                                                        "src": null,
-                                                        "fit": null,
-                                                        "repeat": null
-                                                    },
-                                                    "file": {
-                                                        "poster": null,
-                                                        "mp4": null,
-                                                        "webm": null,
-                                                        "volume": false
-                                                    }
-                                                },
-                                                carousel: {
-                                                    "enable": false,
-                                                    "pagination": false,
-                                                    "autoPlay": false,
-                                                    "items": 4,
-                                                    "singleItem": false,
-                                                    "lazyLoad": true,
-                                                    "lazyEffect": false,
-                                                    "addClassActive": true,
-                                                    "navigation": false,
-                                                    "navigationText": [null, null],
-                                                    "transitionStyle": false,
-                                                    "engineSrc": "http:\/\/localhost:8088\/sweet\/js\/owl.carousel.js"
-                                                },
-                                                carouselConfig: null,
-                                                kenburns: {
-                                                    "enable": false,
-                                                    "images": [],
-                                                    "overlay": null,
-                                                    "engineSrc": "http:\/\/localhost:8088\/sweet\/js\/kenburns.js"
-                                                }
-                                            });
-                                        </script>
-                                    </div>
-                                    <div class="" id="widget-a2332aacf77e91334b297efdec5a07e1">
-                                        <div class="">
-                                            <div class="col-lg-12  col-md-12  col-sm-12  col-xs-12  ">
-                                                <div class="footer-menu-link">
-                                                    <ul>
-                                                        <li class="first">
-                                                            <a href="#">
-                                                               关于薇茜
-                                                            </a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#">
-                                                               配送服务
-                                                            </a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#">
-                                                               FAQ
-                                                            </a>
-                                                        </li>
-                                                        <li  class="footer-last" >
-                                                            <a href="#">
-                                                                联系我们
-                                                            </a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="footer-copyright">
-                        <div class="container">
-                            <div class="footer">
-                                <div class="row">
-                                    <div class="col-xs-12 clearfix">
-                                        <address>
-                                            Copyright © 2015
-                                            <a class="active" href="#"
-                                            title="Magento Themes">
-                                                薇茜甜点
-                                            </a>
-                                            
-                                        </address>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="back-top" class="hidden-phone">
-                        <a href="#top">
-                            <div class="sticker-wrapper">
-                                <div class="sticker" title="Back to Top">
-                                    <i class="fa fa-angle-up">
-                                    </i>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </footer>
+       <footer class="footer-container">
+         <div class="footer-top">
+           <div class="container">
+             <div class="footer">
+               <div class="show-grid row">
+                 <div class="" id="widget-e7922fc64767df69c432eaf0d4b1f5e4">
+                   <div class="">
+                     <h4 class="text-center home-footer-title">
+                       Rabbit Hole
+                     </h4>
+                     <div class="col-lg-12  col-md-12  col-sm-12  col-xs-12  ">
+                       <div class="list-social-icon">
+                         <a href="#">
+                           <i class="fa fa-weibo">
+                           </i>
+                         </a>
+                         <a href="#">
+                           <i class="fa fa-weixin">
+                           </i>
+                         </a>
+                         <a href="#">
+                           <i class="fa fa-envelope">
+                           </i>
+                         </a>
+                       </div>
+                     </div>
+                   </div>
+                   <script type="text/javascript" src="js/frontend.js">
+                   </script>
+                 </div>
+                 <div class="" id="widget-a2332aacf77e91334b297efdec5a07e1">
+                   <div class="">
+                     <div class="col-lg-12  col-md-12  col-sm-12  col-xs-12  ">
+                       <div class="footer-menu-link">
+                         <ul>
+                           <li class="first">
+                             <a href="about.html">
+                               关于薇茜
+                             </a>
+                           </li>
+                           <li>
+                             <a href="instruct.html">
+                               配送服务
+                             </a>
+                           </li>
+                           <li>
+                             <a href="faq.html">
+                               FAQ
+                             </a>
+                           </li>
+                           <li class="footer-last">
+                             <a href="contactus.html">
+                               联系我们
+                             </a>
+                           </li>
+                         </ul>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+         <div class="footer-copyright">
+           <div class="container">
+             <div class="footer">
+               <div class="row">
+                 <div class="col-xs-12 clearfix">
+                   <address>
+                     Copyright © 2015
+                     <a class="active" href="#" title="Magento Themes">
+                       薇茜甜点
+                     </a>
+                   </address>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+         <div id="back-top" class="hidden-phone">
+           <a href="#top">
+             <div class="sticker-wrapper">
+               <div class="sticker" title="Back to Top">
+                 <i class="fa fa-angle-up">
+                 </i>
+               </div>
+             </div>
+           </a>
+         </div>
+       </footer>
         <script type="text/javascript">
           function setGridItem($) {
             var winWidth = $(window).width();
