--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                                                                         alt="mt_bakery" />
                                                                     </a>
                                                                 </div>
-                                                                <div class="mt-main-menu">
+                                                                <div class="mt-main-menu" style="  background: rgba(255,255,255,0.3);">
                                                                     <ul id="mtnav" class="megamenu">
                                                                         <li class="level0  nav-1 level-top first parent parent-sub">
                                                                             <i class="fa fa-angle-down">
@@ -529,7 +529,7 @@
                                                             <div class="border-left">
                                                             </div>
                                                             <div class="mt-icon-ajaxcart">
-                                                                <a class="mt-cart-label home-reg" href="register.html">
+                                                                <a class="mt-cart-label home-reg" href="create_account.html">
                                                                   注册
                                                                 </a>
                                                             </div>
