--- a/check_out.html
+++ b/check_out.html
@@ -365,9 +365,9 @@
                             </div>
                             <div class="header-content-left col-lg-2 col-md-2 col-sm-2 col-xs-12 v-grid">
                                 <div class="logo">
-                                    <a href="index.html" title="薇茜甜点">
+                                    <a href="index.html" title="mt_bakery">
                                         <img class="img-responsive" src="images/logo.png"
-                                        alt="薇茜甜点" />
+                                        alt="mt_bakery" />
                                     </a>
                                 </div>
                             </div>
@@ -380,7 +380,7 @@
                                                     <!-- navigation BOF -->
                                                     <div class="mt-navigation hidden-xs">
                                                         <div class="logo-sticky col-lg-3 col-md-3 col-sm-3" style="display: none;">
-                                                            <a href="#">
+                                                            <a href="index.html">
                                                                 <img class="img-sticky img-responsive" src="images/logo.png"
                                                                 alt="mt_bakery" />
                                                             </a>
@@ -390,7 +390,7 @@
                                                                 <li class="level0  nav-1 level-top first parent parent-sub">
                                                                     <i class="fa fa-angle-down">
                                                                     </i>
-                                                                    <a href="#" class="level-top">
+                                                                    <a href="product_list.html" class="level-top">
                                                                         <span>
                                                                             系列
                                                                         </span>
@@ -436,7 +436,7 @@
                                                                             </div>
                                                                             <div class="menu-static-blocks mtmenu-block mtmenu-block-right grid12-5">
                                                                                 <div class="block-img">
-                                                                                    <a href="#">
+                                                                                    <a href="detail.html">
                                                                                         <img src="images/1.jpg"
                                                                                         />
                                                                                     </a>
@@ -448,7 +448,7 @@
                                                                 <li class="level0 nav-1 level-top first parent parent-sub">
                                                                     <i class="fa fa-angle-down">
                                                                     </i>
-                                                                    <a href="#" class="level-top">
+                                                                    <a href="product_list.html" class="level-top">
                                                                         <span>
                                                                             用途
                                                                         </span>
@@ -501,7 +501,7 @@
                                                                             </div>
                                                                             <div class="menu-static-blocks mtmenu-block mtmenu-block-right grid12-5">
                                                                                 <div class="block-img">
-                                                                                    <a href="#">
+                                                                                    <a href="detail.html">
                                                                                         <img src="images/1.jpg"
                                                                                         />
                                                                                     </a>
@@ -519,14 +519,14 @@
                                                                     </a>
                                                                 </li>
                                                                 <li class="level0 nav-3 level-top">
-                                                                    <a href="#" class="level-top">
+                                                                    <a href="faq.html" class="level-top">
                                                                         <span>
                                                                             FAQ
                                                                         </span>
                                                                     </a>
                                                                 </li>
                                                                 <li class="level0 level-top parent custom-block  menu-item-right">
-                                                                    <a href="#"
+                                                                    <a href="instruct.html"
                                                                     class="level-top">
                                                                         <span>
                                                                             配送说明
@@ -556,7 +556,7 @@
                                                     <div class="border-left">
                                                     </div>
                                                     <div class="mt-icon-ajaxcart">
-                                                        <a class="mt-cart-label home-reg" href="#">
+                                                        <a class="mt-cart-label home-reg" href="create_account.html">
                                                           注册
                                                         </a>
                                                     </div>
@@ -572,7 +572,9 @@
                                                 method="get">
                                                     <div class="search-style">
                                                         <div class="mt-icon-ajax">
-                                                            登入
+                                                            <a class="login-a" href="login.html">
+                                                                登入
+                                                            </a>
                                                         </div>
                                                     </div>
                                 
@@ -629,6 +631,17 @@
                     </div>
                 </div>
             </div>
+            <script type="text/javascript">
+                // $mt(window).load(function() {
+                //     $mt("#mt-sticky-header").sticky({
+                //         topSpacing: 0
+                //     });
+                //     var $logoImg = $mt('.mt-wrapper .header .logo img');
+                //     if ($logoImg.css('min-height') == '1px') {
+                //         $logoImg.attr('src', $logoImg.attr('src').replace('logo.png', 'logo_1.png'));
+                //     }
+                // });
+            </script>
         </header>
         <div class="clearfix">
         </div>
