首页搜索框修改和添加微信二维码

--- a/about.html
+++ b/about.html
@@ -730,9 +730,9 @@
                             <i class="fa fa-weibo">
                             </i>
                           </a>
-                          <a href="#">
-                            <i class="fa fa-weixin">
-                            </i>
+                          <a href="" class=" icon-chat">
+                            <i class="fa fa-weixin"></i>
+                            <div class="chat-tips"><i></i><img style="width:138px;height:138px;" src="images/3.jpg" ></div>
                           </a>
                           <a href="#">
                             <i class="fa fa-envelope">
